--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Trident - Homepage</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body data-bs-theme="dark">
 
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="logo.png" alt="Trident Technologies" width="50" height="50">
+                <span class="navbar-brand-text">Trident Technologies</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Neptune</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            
+            <div class="carousel-item active">
+                <img src="Carousel1.jpg" class="d-block w-100" alt="Neptune OS">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="display-3 fw-bold" style="color: white;">Designed for everywhere, and everytime</h1>
+                    <p class="lead" style="color: white;">Designed for the present and the future</p>
+                    <button class="btn btn-primary btn-lg">Learn More</button>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img src="Carousel2.jpg" class="d-block w-100" alt="Speed">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="display-3 fw-bold" style="color: white;">Trident Neptune</h1>
+                    <p class="lead" style="color: white;">Optimized for the next generation of hardware.</p>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img src="Carousel3.jpg" class="d-block w-100" alt="Design">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="display-3 fw-bold" style="color: white;">Trident Uranus Office</h1>
+                    <p class="lead" style="color: white;">Design that stays out of your way.</p>
+                </div>
+            </div>
+
+        </div>
+        
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+    </div>
+    <div class="neptune-grid">
+        <br>
+        <div class="card tall-item" style="width: 99%; background-color: darkslategray">
+            <div class="card-body">
+                <h5 class="card-title">Neptune</h5>
+                <p class="card-text">A revolutionary and innovative OS.</p>
+                <a href="#" class="btn btn-primary">Download</a>
+            </div>
+        </div><br>
+        <div class="card tall-item" style="width: 99%; background-color: darkslategray">
+            <div class="card-body">
+                <h5 class="card-title">Neptune Premium</h5>
+                <p class="card-text">A revolutionary and innovative OS. Though with premium features. $1.99 only!</p>
+                <a href="#" class="btn btn-primary">Buy Now</a>
+            </div>
+        </div><br>
+        <div class="card tall-item" style="width: 99%; background-color: darkslategray">
+            <div class="card-body">
+                <h5 class="card-title">Uranus Office</h5>
+                <p class="card-text">A revolutionary and innovative full office program.</p>
+                <a href="#" class="btn btn-primary">Buy now</a>
+            </div>
+        </div><br>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
