--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="google-site-verification" content="qKSdz4Mw3j8U578YWgebZBJkxN7HraVi2OSdRO0ym-Y" />
     <title>Trident - Homepage</title>
     <link rel="stylesheet" href="style.css">
 </head>
